[project]
name = "e2e-cinebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "google-adk>=1.4.1",
    "langchain-google-genai>=2.1.10",
    "litellm>=1.76.0",
    "lmstudio>=1.5.0",
    "openai-agents>=0.2.9",
    "rich>=14.1.0",
]
